# CrossOSClipboard

./: Activity_log_form (1).docx  BLEManager.txt  README.md
P2Pclipboard/P2Pclipboard/: BLEManager.swift  BLEPayloadManager.swift  ClipboardEncryption.swift  ClipboardImageFormat.swift  ClipboardSyncManager.swift  ConnectedModuleView.swift  ContentView.swift  Enums.swift  Info.plist  KeyGenerator.swift  MDNSBrowser.swift  MessageProtocol.swift  MessageType.swift  P2Pclipboard.entitlements  P2PclipboardApp.swift  PasswordSheetView.swift  UIntExtensions.swift
P2Pclipboard/P2Pclipboard.xcodeproj/: project.pbxproj
P2Pclipboard/P2Pclipboard.xcodeproj/project.xcworkspace/xcuserdata/arseniikhmara.xcuserdatad/: UserInterfaceState.xcuserstate
P2Pclipboard/P2Pclipboard.xcodeproj/xcuserdata/arseniikhmara.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
P2Pclipboard/P2PclipboardTests/: BLEManagerMock.swift  ClipboardEncryptionTests.swift  KeyGeneratorTests.swift
P2Pclipboard/P2PclipboardUITests/: P2PclipboardUITestsLaunchTests.swift
P2Pclipbord2/: .gitignore  CMakeLists.txt
P2Pclipbord2/src/: BLEManager.cpp  BLEManager.h  BLEPayload.h  ClipboardEncryption.cpp  ClipboardEncryption.h  ClipboardImageHandler.cpp  ClipboardManager.cpp  ClipboardManager.h  MessageProtocol.cpp  MessageProtocol.h  NetworkManager.cpp  NetworkManager.h  UUIDGenerator.cpp  main.cpp
Swift/P2Pclipboard/: BLEManager.swift  ClipboardImageFormat.swift  ClipboardPIPController.swift  GenerateUUID.swift  MDNSAdvertiser.swift  README.md
Swift/P2Pclipboard.xcodeproj/: project.pbxproj
Swift/P2Pclipboard.xcodeproj/project.xcworkspace/xcuserdata/arseniikhmara.xcuserdatad/: UserInterfaceState.xcuserstate
Swift/P2Pclipboard.xcodeproj/xcuserdata/arseniikhmara.xcuserdatad/xcschemes/: xcschememanagement.plist
Swift/P2PclipboardTests/: MessageProtocolTests.swift  P2PclipboardTests.swift  UUIDGenerationTests.swift
Swift/P2PclipboardUITests/: P2PclipboardUITests.swift
Windows/: .gitignore  CMakeLists.txt  app.aps  app.manifest
Windows/src/: BLEManager.cpp  BLEManager.h  ByteUtils.cpp  ByteUtils.h  ClipboardImageHandler.h  ClipboardManager.cpp  ClipboardManager.h  MessageProtocol.cpp  MessageProtocol.h  UUIDGenerator.h  main.cpp
Windows/tests/: test_byteutils.cpp  test_clipboardencryption.cpp  test_clipboardmanager.cpp  test_messageprotocol.cpp  test_uuidgenerator.cpp
